2003-10-17  Ian Lance Taylor  <ian@wasabisystems.com>

	* gas/arm/iwmmxt-bad.s: New file.
	* gas/arm/iwmmxt-bad.l: New file.
	* gas/arm/arm.exp: Run new test.

2003-10-16  Ian Lance Taylor  <ian@wasabisystems.com>

	* gas/arm/iwmmxt.d: Add -miwmmxt to #objdump line, to get the
	right disassembly.

2003-10-16  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/alpha/elf-reloc-8.d: Updated.

2003-10-10  Dave Brolley  <brolley@redhat.com>

	* gas/frv/allinsn.s: Use preoperly aligned registers.
	* gas/frv/allinsn.d: Update expected results.

2003-10-08  Chris Demetriou  <cgd@broadcom.com>

	* lib/gas-defs.exp (gas_run): Always log the command being run.
	(gas_start): Likewise.
	(regexp_diff): Make error reporting about non-existent files
	consistent.

2003-10-06  Nick Clifton  <nickc@redhat.com>

	* gas/macros/app1.d: Skip sections symbols (if present).
	* gas/macros/app2.d: Likewise.
	* gas/macros/app3.d: Likewise.
	* gas/macros/app4.d: Likewise.

2003-10-04  Christian Groessler  <chris@groessler.org>

	* gas/z8k/calr-backf.s: New file.
	* gas/z8k/calr-forwf.s: New file.
	* gas/z8k/calr.d: New file.
	* gas/z8k/calr.s: New file.
	* gas/z8k/djnz-backf.s: New file.
	* gas/z8k/djnz-backf2.s: New file.
	* gas/z8k/djnz.d: New file.
	* gas/z8k/djnz.s: New file.
	* gas/z8k/jr-back.d: New file.
	* gas/z8k/jr-forw.d: New file.
	* gas/z8k/jr-back.s: Fix displacement length. Add some more jumps
	for jr-back.d. 
	* gas/z8k/jr-backf.s: Fix displacement length.
	* gas/z8k/jr-forw.s: Fix displacement length. Add some more jumps
	for jr-forw.d. 
	* gas/z8k/jr-forwf.s: Fix displacement length.
	* gas/z8k/z8k.exp: Run new tests.

2003-10-01  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* gas/mips/ldstla-32-shared.d: New file.
	* gas/mips/ldstla-32.d: New file.
	* gas/mips/ldstla-32.s: New file.
	* gas/mips/ldstla-n32-shared.d: New file.
	* gas/mips/ldstla-n32.d: New file.
	* gas/mips/ldstla-n32.s: New file.
	* gas/mips/ldstla-n64-shared.d: New file.
	* gas/mips/ldstla-n64.d: New file.